--- a/advocacia-main/formulario.html
+++ b/advocacia-main/formulario.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Aluno</title>
-    <link rel="stylesheet" href="formulario.css"> 
+    <link rel="stylesheet" href="formulario.css">
 </head>
 <body>
+
+    <header>
+        <div class="header-container">
+            <h1>Escritório de Advocacia</h1>
+            <nav>
+                <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="inicial.html">Inicio</a></li>
+                    <li><a href="cadastroadv.html">Cadastrar Advogado</a></li>
+                    <li><a href="registro.html">Login Advogado</a></li>
+                    <li><a href="logincliente.html">Login Cliente</a></li>
+                    <li><a href="cadastrocliente.html">Cadastrar Cliente</a></li>
+                    <li><a href="paginacliente.html">Cliente</a></li>
+            </nav>
+        </div>
+    </header>
+
     <div class="container">
         <h1>Cadastro do Advogado</h1>
         <div class="form-group">
@@ -26,6 +42,8 @@
         <p>A data de nascimento é: <span id="mostra_data"></span></p>
         <p>A OAB é: <span id="mostra_oab"></span></p>
     </div>
+
     <script src="formulario.js"></script>
+    
 </body>
 </html>
