--- a/advocacia-main/cadastrocliente.html
+++ b/advocacia-main/cadastrocliente.html
@@ -9,22 +9,26 @@
 <body>
 
   <header>
-    <div class="container1">
+    <div class="header-container">
         <h1>Escritório de Advocacia</h1>
         <nav>
             <ul>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="inicial.html">Login</a></li>
+              <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="inicial.html">Inicio</a></li>
+                    <li><a href="cadastroadv.html">Cadastrar Advogado</a></li>
+                    <li><a href="registro.html">Login Advogado</a></li>
+                    <li><a href="logincliente.html">Login Cliente</a></li>
+                    <li><a href="cadastrocliente.html">Cadastrar Cliente</a></li>
+                    <li><a href="paginacliente.html">Cliente</a></li>
             </ul>
         </nav>
     </div>
-  </header>
+</header>
 
   <div class="container">
     <h2>Cadastrar Cliente</h2>
 
-    <form>
+    <form action="area_cliente.html" method="POST">
       <div class="form-group">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" placeholder="XXXXXXXXXX" required>
