--- a/advocacia-main/inicial.html
+++ b/advocacia-main/inicial.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container1">
             <h1>Escritório de Advocacia</h1>
             <nav>
                 <ul>
                     <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                    <li><a href="cadastrocliente.html">Login</a></li>
+                    <li><a href="inicial.html">Inicio</a></li>
+                    <li><a href="cadastroadv.html">Cadastrar Advogado</a></li>
+                    <li><a href="registro.html">Login Advogado</a></li>
+                    <li><a href="logincliente.html">Login Cliente</a></li>
+                    <li><a href="cadastrocliente.html">Cadastrar Cliente</a></li>
+                    <li><a href="paginacliente.html">Cliente</a></li>
                 </ul>
             </nav>
         </div>
