--- a/advocacia-main/agenda.html
+++ b/advocacia-main/agenda.html
@@ -16,6 +16,7 @@
                     <li><a href="cadastroadv.html">Cadastrar Advogado</a></li>
                     <li><a href="registro.html">Login Advogado</a></li>
                     <li><a href="cadastrocliente.html">Cadastrar Cliente</a></li>
+                    <li><a href="agenda.html">Agenda</a></li>
                     
                 </ul>
             </nav>
