--- a/advocacia-main/paginacliente.html
+++ b/advocacia-main/paginacliente.html
@@ -12,13 +12,11 @@
             <h1>Escritório de Advocacia</h1>
             <nav>
                 <ul>
-                    <li><a href="#servicos">Serviços</a></li>
-                    <li><a href="inicial.html">Inicio</a></li>
+                    <l<li><a href="inicial.html">Inicio</a></li>
                     <li><a href="cadastroadv.html">Cadastrar Advogado</a></li>
                     <li><a href="registro.html">Login Advogado</a></li>
-                    <li><a href="logincliente.html">Login Cliente</a></li>
                     <li><a href="cadastrocliente.html">Cadastrar Cliente</a></li>
-                    <li><a href="paginacliente.html">Cliente</a></li>
+                    <li><a href="agenda.html">Agenda</a></li>
                 </ul>
             </nav>
         </div>
