--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
                 <p>&copy; 2024 Escritório de Advocacia. Todos os direitos reservados.</p>
                 <nav>
                     <ul>
-                        <li><a href="#sobre-nos">Sobre Nós</a></li>
+                        <li><a href="#sobrenos">Sobre Nós</a></li>
                         <li><a href="#servicos">Serviços</a></li>
                         <li><a href="#contato">Contato</a></li>
                     </ul>
